--- a/shufl-web/src/app/components/shared/loading-icon/loading-icon.component.html
+++ b/shufl-web/src/app/components/shared/loading-icon/loading-icon.component.html
@@ -1,4 +1,4 @@
-<div class="loading-icon-container" [ngClass]="{'visible': visible || isLoading, 'embedded': isEmbedded}"
+<div class="loading-icon-container" [ngClass]="{'visible': visible || isLoading}"
     [ngStyle]="{'width': dimensions + 'px', 'height': dimensions + 'px', 'top': 'calc(50% - ' + dimensions / 2 + 'px)', 'left': 'calc(50% - ' + dimensions / 2 + 'px)'}">
     <img src="/assets/svg/loading.svg" [ngStyle]="{'width': dimensions + 'px', 'height': dimensions + 'px'}">
 </div>
