--- a/shufl-web/src/app/components/shared/user/password-reset/password-reset.component.html
+++ b/shufl-web/src/app/components/shared/user/password-reset/password-reset.component.html
@@ -1,4 +1,5 @@
 <div class="user-form-card" *ngIf="isRequesting">
+    <app-card-nav-bar [closeVisible]="true"></app-card-nav-bar>
     <div class="user-form-container">
         <div class="password-reset-request-form-container" *ngIf="!resetRequestSentSuccessfully">
             <form #passwordResetRequestForm="ngForm" (ngSubmit)="passwordResetRequestAsync(passwordResetRequestForm.value)">
@@ -25,6 +26,7 @@
 </div>
 
 <div class="user-form-card" *ngIf="!isRequesting">
+    <app-card-nav-bar [closeVisible]="true"></app-card-nav-bar>
     <div class="user-form-container">
         <div class="password-reset-set-form-container" *ngIf="isResetTokenValid && !passwordResetSuccessfully">
             <form #passwordResetSetForm="ngForm" (ngSubmit)="passwordResetSetAsync(passwordResetSetForm.value)">
