--- a/shufl-web/src/app/components/shared/user/register/register.component.scss
+++ b/shufl-web/src/app/components/shared/user/register/register.component.scss
@@ -1,65 +1,65 @@
-@import "src/assets/scss/variables/colours";
+// @import "src/assets/scss/variables/colours";
 
-.register-card {
-    background-color: $tertiary-background-colour;
+// .register-card {
+//     background-color: $tertiary-background-colour;
 
-    padding: 10px 0;
+//     padding: 10px 0;
 
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     bottom: 0;
+//     right: 0;
 
-    overflow-y: auto;
+//     overflow-y: auto;
 
-    z-index: 1;
+//     z-index: 1;
 
-    .register-form-container {
-        width: 90%;
-        height: fit-content;
+//     .register-form-container {
+//         width: 90%;
+//         height: fit-content;
 
-        margin: auto;
-        padding: 10px 0;
-    }
+//         margin: auto;
+//         padding: 10px 0;
+//     }
 
-    .form-error {
-        color: $primary-negative-colour;
+//     .form-error {
+//         color: $primary-negative-colour;
 
-        display: none;
+//         display: none;
 
-        &.visible {
-            display: block;
-        }
-    }
+//         &.visible {
+//             display: block;
+//         }
+//     }
 
-    .login-link {
-        width: 100%;
+//     .login-link {
+//         width: 100%;
 
-        margin-top: 15px;
+//         margin-top: 15px;
 
-        display: block;
+//         display: block;
 
-        text-align: center;
-    }
-}
+//         text-align: center;
+//     }
+// }
 
-@media (min-width: 1920px) and (max-width: 2560px) {
-    .register-card {
-        .register-form-container {
-            width: 50%;
+// @media (min-width: 1920px) and (max-width: 2560px) {
+//     .register-card {
+//         .register-form-container {
+//             width: 50%;
 
-            margin-top: 40px;
-        }
-    }
-}
+//             margin-top: 40px;
+//         }
+//     }
+// }
 
-@media (min-width: 2560px) {
-    .register-card {
-        .register-form-container {
-            width: 40%;
+// @media (min-width: 2560px) {
+//     .register-card {
+//         .register-form-container {
+//             width: 40%;
 
-            margin-top: 50px;
-        }
-    }
-}
+//             margin-top: 50px;
+//         }
+//     }
+// }
