--- a/shufl-web/src/assets/scss/user-form.scss
+++ b/shufl-web/src/assets/scss/user-form.scss
@@ -14,14 +14,14 @@
 
     overflow-y: auto;
 
-    z-index: 1;
-
     .user-form-container {
         width: 90%;
         height: fit-content;
 
         margin: auto;
-        padding: 10px 0;
+        padding: 35px 0 10px 0;
+
+        z-index: 2;
 
         .form-error {
             color: $primary-negative-colour;
