--- a/shufl-web/src/styles.scss
+++ b/shufl-web/src/styles.scss
@@ -59,6 +59,10 @@ body {
         background-image: url("assets/svg/x.svg");
     }
 
+    .invite-icon {
+        background-image: url("assets/svg/invite.svg");
+    }
+
     .button {
         color: $primary-foreground-colour;
         background-image: linear-gradient(
@@ -87,161 +91,5 @@ body {
 
     .divider {
         background-color: $tertiary-foreground-colour;
-    }
-
-    .card-container {
-        position: absolute;
-        left: 5%;
-        right: 5%;
-
-        z-index: 1;
-
-        .card {
-            background-color: $primary-background-colour;
-
-            border-radius: $primary-border-radius;
-
-            .album-info-container,
-            .artist-info-container {
-                .album-cover,
-                .artist-image {
-                    display: flex;
-
-                    img {
-                        width: 250px;
-                        height: 250px;
-
-                        margin: auto;
-                    }
-                }
-
-                h2,
-                h3,
-                p {
-                    text-align: center;
-                }
-
-                .artists-container,
-                .genres-container {
-                    display: flex;
-
-                    justify-content: center;
-
-                    .artist-link,
-                    .genre-label {
-                        color: $tertiary-foreground-colour;
-
-                        text-decoration: none;
-
-                        &:not(:last-child)::after {
-                            content: ", ";
-                            margin-right: 3px;
-                        }
-                    }
-
-                    .artist-link {
-                        &.disabled {
-                            cursor: default;
-
-                            pointer-events: none;
-                        }
-
-                        &:not(.disabled):hover {
-                            text-decoration: underline;
-                        }
-                    }
-
-                    .genre-label {
-                        margin: 10px 0 5px 0;
-                    }
-                }
-
-                .followers,
-                .release-date {
-                    margin: 5px 0 10px 0;
-                }
-
-                .button {
-                    width: 60%;
-                    height: 50px;
-
-                    padding: 10px;
-                    margin: auto;
-                    margin-bottom: 25px;
-
-                    display: flex;
-
-                    text-decoration: none;
-
-                    img {
-                        width: 40px;
-                        height: 40px;
-
-                        margin-top: 5px;
-                        margin-right: -40px;
-                    }
-
-                    p {
-                        margin: auto;
-
-                        font-size: 2em;
-                    }
-                }
-            }
-        }
-    }
-}
-
-@media (min-width: 475px) and (max-width: 765px) {
-    body {
-        .card-container {
-            left: 10%;
-            right: 10%;
-        }
-    }
-}
-
-@media (min-width: 765px) and (max-width: 1024px) {
-    body {
-        .card-container {
-            left: 20%;
-            right: 20%;
-        }
-    }
-}
-
-@media (min-width: 1024px) and (max-width: 1365px) {
-    body {
-        .card-container {
-            left: 30%;
-            right: 30%;
-        }
-    }
-}
-
-@media (min-width: 1365px) and (max-width: 1920px) {
-    body {
-        .card-container {
-            left: 35%;
-            right: 35%;
-        }
-    }
-}
-
-@media (min-width: 1920px) and (max-width: 2560px) {
-    body {
-        .card-container {
-            left: 38%;
-            right: 38%;
-        }
-    }
-}
-
-@media (min-width: 2560px) {
-    body {
-        .card-container {
-            left: 42%;
-            right: 42%;
-        }
     }
 }
