Fixed home component

--- a/shufl-web/src/app/components/home/home.component.html
+++ b/shufl-web/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="card-container">
+<div class="card-container home-card-container">
     <div class="card">
         <div class="app-icon"></div>
         <app-icon-button [buttonText]="'Random Track'" [buttonIconSource]="'assets/img/button-icons/musical-note.png'" (click)="buttonClick('track')"></app-icon-button>
