Refactored loading icon

--- a/shufl-web/src/app/components/group/group-item-list/group-item-list.component.html
+++ b/shufl-web/src/app/components/group/group-item-list/group-item-list.component.html
@@ -1,5 +1,8 @@
-<div class="group-item-list">
-    <div app-group-item 
-        *ngFor="let groupItem of groupItems" 
-        [groupItemData]="groupItem"></div>
+<div class="group-item-list-container">
+    <div class="group-item-list" *mgIf="groupSuggestions != null">
+        <div app-group-item 
+        *ngFor="let groupSuggestion of groupSuggestions" 
+        [groupSuggestion]="groupSuggestion"></div>
+    </div>
+    <app-loading-icon *ngIf="isLoading" [dimensions]="75"></app-loading-icon>
 </div>
