--- a/shufl-web/src/app/components/group/group-item-list/group-item-list.component.scss
+++ b/shufl-web/src/app/components/group/group-item-list/group-item-list.component.scss
@@ -1,7 +1,11 @@
-.group-item-list {
-    :last-child {
-        ::ng-deep .group-item-container {
-            border-bottom: none;
+.group-item-list-container {
+    min-height: 355px;
+
+    .group-item-list {
+        :last-child {
+            ::ng-deep .group-item-container {
+                border-bottom: none;
+            }
         }
     }
 }
