--- a/shufl-web/src/app/components/shared/group-invite/group-invite.component.html
+++ b/shufl-web/src/app/components/shared/group-invite/group-invite.component.html
@@ -21,5 +21,5 @@
             <app-button [buttonText]="'View your Groups'" (click)="redirectToGroups()" *ngIf="groupsButtonVisible"></app-button>
         </div>
     </div>
-    <app-loading-icon [isLoading]="!verificationRequestSentSuccessfully"></app-loading-icon>
+    <app-loading-icon *ngIf="!verificationRequestSentSuccessfully"></app-loading-icon>
 </div>
