Setup Invite modal

--- a/shufl-web/src/app/components/group/group-item-list/group-item-list.component.html
+++ b/shufl-web/src/app/components/group/group-item-list/group-item-list.component.html
@@ -1,5 +1,5 @@
 <div class="group-item-list-container">
-    <div class="group-item-list" *mgIf="groupSuggestions != null">
+    <div class="group-item-list" *ngIf="groupSuggestions != null">
         <div app-group-item 
         *ngFor="let groupSuggestion of groupSuggestions" 
         [groupSuggestion]="groupSuggestion"></div>
