--- a/shufl-web/src/app/components/shared/buttons/loading-button/loading-button.component.html
+++ b/shufl-web/src/app/components/shared/buttons/loading-button/loading-button.component.html
@@ -1,4 +1,4 @@
 <button class="button" [ngClass]="{'loading': isLoading}" [disabled]="isDisabled">
     <span class="text">{{ buttonText }}</span>
-    <div class="loading-icon primary-foreground"></div>
+    <div class="loading-icon icon primary-foreground"></div>
 </button>
