--- a/shufl-web/src/app/components/group/group.component.html
+++ b/shufl-web/src/app/components/group/group.component.html
@@ -1,6 +1,6 @@
 <div class="card-container">
     <div class="card">
-        <app-card-nav-bar [closeVisible]="false"></app-card-nav-bar>
+        <app-card-nav-bar [inviteVisible]="true" (inviteClicked)="invitePeopleClicked()"></app-card-nav-bar>
         <div class="group-info-container">
             <app-loading-icon [dimensions]="50" *ngIf="isLoading"></app-loading-icon>
             <div class="group-info" *ngIf="!isLoading && group != null">
