--- a/shufl-web/src/app/components/group/group.component.scss
+++ b/shufl-web/src/app/components/group/group.component.scss
@@ -11,6 +11,8 @@
                 }
 
                 h1 {
+                    color: $primary-foreground-colour;
+
                     margin-top: 0;
                     margin-bottom: 10px;
 
@@ -34,6 +36,8 @@
 
                 .divider {
                     height: 2px;
+
+                    margin-top: 5px;
                 }
             }
         }
