--- a/shufl-web/src/app/components/group/group.component.html
+++ b/shufl-web/src/app/components/group/group.component.html
@@ -10,6 +10,6 @@
                 <div class="divider"></div>
             </div>
         </div>
-        <app-group-item-list [groupId]="groupId" *ngIf="groupId != null"></app-group-item-list>
+        <app-group-suggestion-list [groupId]="groupId" *ngIf="groupId != null"></app-group-suggestion-list>
     </div>
 </div>
