--- a/shufl-web/src/app/components/shared/group/group-create-invite/group-create-invite.component.scss
+++ b/shufl-web/src/app/components/shared/group/group-create-invite/group-create-invite.component.scss
@@ -27,4 +27,10 @@ $clipboard-icon-dimensions: 25px;
             color: $tertiary-foreground-colour;
         }
     }
+
+    .invite-error {
+        color: $primary-negative-colour;
+
+        text-align: center;
+    }
 }
