--- a/shufl-web/src/app/components/shared/group/group-create-invite/group-create-invite.component.html
+++ b/shufl-web/src/app/components/shared/group/group-create-invite/group-create-invite.component.html
@@ -3,12 +3,12 @@
     <div class="invite-link-container" *ngIf="!isLoading && inviteLinkCreatedSuccessfully">
         <div class="form-group active populated">
             <div class="input-container">
-                <label for="inviteLinkInput">Invite</label>
+                <label for="inviteLinkInput">Invite Link</label>
                 <input type="text" class="form-control" disabled #inviteLinkInput>
                 <div class="icon" [ngClass]="{'clipboard-icon': showClipboard, 'check-icon': !showClipboard}" (click)="copyInviteLink()"></div>
             </div>
         </div>
-        <p>You can share this invite link with people to allow them to join the group. The link will expire in 7 days.</p>
+        <p>You can share this invite link with people to allow them to join the group. This link will expire in 7 days.</p>
     </div>
     <h2 class="invite-error" *ngIf="!isLoading && !inviteLinkCreatedSuccessfully">There was an error generating an invite link</h2>
 </div>
