Finished refactoring names

--- a/shufl-web/src/app/components/group/group-suggestion-list/group-suggestion/group-suggestion.component.html
+++ b/shufl-web/src/app/components/group/group-suggestion-list/group-suggestion/group-suggestion.component.html
@@ -1,4 +1,4 @@
-<div class="group-suggestion-container" (click)="groupsuggestionClicked()">
+<div class="group-suggestion-container" (click)="groupSuggestionClicked()">
     <p class="group-suggestion-added-date">{{ groupSuggestion.createdOn | date: 'EEEE dd MMMM yyyy'}}</p>
     <div class="group-suggestion-data-container">
         <div class="album-container">
