--- a/shufl-web/src/app/components/group/group-suggestion-details/group-suggestion-details.component.html
+++ b/shufl-web/src/app/components/group/group-suggestion-details/group-suggestion-details.component.html
@@ -1,15 +1,15 @@
-<div class="card-container group-item-details-card-container">
+<div class="card-container group-suggestion-details-card-container">
     <div class="card" [ngClass]="{ 'loaded': dataLoaded }">
-        <div class="group-item-info-container">
+        <div class="group-suggestion-info-container">
             <div class="album-container">
                 <app-album-info [album]="album" [genres]="genres" [linkDisabled]="false"></app-album-info>
             </div>
             <div class="overall-rating-container">
-                <app-group-item-rating [rating]="overallRating"></app-group-item-rating>
+                <app-group-suggestion-rating [rating]="overallRating"></app-group-suggestion-rating>
             </div>
         </div>
         <div class="group-ratings-container">
-            <app-group-item-user-rating-list></app-group-item-user-rating-list>
+            <app-group-suggestion-user-rating-list></app-group-suggestion-user-rating-list>
         </div>
     </div>
 </div>
