--- a/shufl-web/src/styles.scss
+++ b/shufl-web/src/styles.scss
@@ -1,6 +1,6 @@
 @import "src/assets/scss/variables/colours";
 @import "src/assets/scss/variables/dimensions";
-@import '~@angular/material/theming';
+@import "~@angular/material/theming";
 @include mat-core();
 
 html {
