--- a/shufl-web/src/app/components/groups-list/groups-list.component.scss
+++ b/shufl-web/src/app/components/groups-list/groups-list.component.scss
@@ -40,18 +40,19 @@
                 }
             }
 
-            .negative-message {
+            .no-groups-message {
                 width: 100%;
                 height: 150px;
 
                 display: flex;
                 align-items: center;
 
-                h2 {
+                p {
                     width: 100%;
 
                     color: $tertiary-foreground-colour;
 
+                    font-size: 1.75em;
                     text-align: center;
                 }
             }
