--- a/shufl-web/src/app/components/group/group-suggestion-list/group-suggestion-list.component.scss
+++ b/shufl-web/src/app/components/group/group-suggestion-list/group-suggestion-list.component.scss
@@ -3,6 +3,8 @@
 .group-suggestion-list-container {
     min-height: 355px;
 
+    position: relative;
+
     .group-suggestion-list {
         :last-child {
             ::ng-deep .group-suggestion-container {
