--- a/shufl-web/src/app/components/group/group.component.scss
+++ b/shufl-web/src/app/components/group/group.component.scss
@@ -5,6 +5,8 @@
         .group-info-container {
             min-height: 95px;
 
+            position: relative;
+
             .group-info {
                 * {
                     text-align: center;
