--- a/shufl-web/src/app/components/album/album.component.scss
+++ b/shufl-web/src/app/components/album/album.component.scss
@@ -14,6 +14,10 @@
             padding: 0;
             margin: 0;
 
+            -webkit-transition: none;
+            -moz-transition: none;
+            transition: none;
+
             .album-info-container {
                 .album-cover {
                     img {
@@ -37,6 +41,16 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
+                
+                opacity: 0;
+
+                pointer-events: none;
+
+                &.visible {
+                    opacity: 1;
+
+                    pointer-events: initial;
+                }
             }
         }
     }
