--- a/shufl-web/src/app/components/group/group.component.scss
+++ b/shufl-web/src/app/components/group/group.component.scss
@@ -36,6 +36,10 @@
                     display: block;
                 }
 
+                .action-button-container {
+                    margin-top: 15px;
+                }
+
                 .divider {
                     height: 2px;
 
