--- a/shufl-web/src/app/components/group/group-suggestion-details/group-suggestion-user-rating-list/group-suggestion-user-rating-list.component.html
+++ b/shufl-web/src/app/components/group/group-suggestion-details/group-suggestion-user-rating-list/group-suggestion-user-rating-list.component.html
@@ -1,8 +1,12 @@
-<div class="group-suggestion-user-rating-list-container">
+<div class="group-suggestion-user-rating-list-container" *ngIf="groupSuggestionRatings != null && groupSuggestionRatings.length > 0">
     <div class="ratings-left">
-        <app-group-suggestion-user-rating *ngFor="let rating of ratingsLeft" [rating]="rating" [position]="'left'"></app-group-suggestion-user-rating>
+        <app-group-suggestion-user-rating *ngFor="let rating of ratingsLeft" [groupSuggestionRating]="rating" [position]="'left'"></app-group-suggestion-user-rating>
     </div>
     <div class="ratings-right">
-        <app-group-suggestion-user-rating *ngFor="let rating of ratingsRight" [rating]="rating" [position]="'right'"></app-group-suggestion-user-rating>
+        <app-group-suggestion-user-rating *ngFor="let rating of ratingsRight" [groupSuggestionRating]="rating" [position]="'right'"></app-group-suggestion-user-rating>
     </div>
+</div>
+
+<div class="no-group-suggestion-user-ratings-message" *ngIf="groupSuggestionRatings == null || groupSuggestionRatings.length === 0">
+    <p>No Ratings Yet</p>
 </div>
