--- a/shufl-web/src/app/components/group/group-suggestion-details/group-suggestion-user-rating-list/group-suggestion-user-rating-list.component.scss
+++ b/shufl-web/src/app/components/group/group-suggestion-details/group-suggestion-user-rating-list/group-suggestion-user-rating-list.component.scss
@@ -1,3 +1,5 @@
+@import "src/assets/scss/variables/colours";
+
 .group-suggestion-user-rating-list-container {
     display: flex;
     flex-direction: column;
@@ -5,6 +7,21 @@
     .ratings-left,
     .ratings-right {
         width: 100%;
+    }
+}
+
+.no-group-suggestion-user-ratings-message {
+    width: 100%;
+    height: 355px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    p {
+        color: $tertiary-foreground-colour;
+
+        font-size: 1.75em;
     }
 }
 
