--- a/shufl-web/src/app/components/shared/group/dialogs/group-suggestion-rate/group-suggestion-rate.component.scss
+++ b/shufl-web/src/app/components/shared/group/dialogs/group-suggestion-rate/group-suggestion-rate.component.scss
@@ -6,8 +6,8 @@
         margin: 0;
     }
 
-    input[type=number] {
-        -moz-appearance:textfield;
+    input[type="number"] {
+        -moz-appearance: textfield;
     }
 
     .form-group {
@@ -17,13 +17,13 @@
                 &::after {
                     width: fit-content;
                     height: 25px;
-                    
+
                     position: absolute;
                     top: 34px;
                     left: 35px;
-        
+
                     font-size: 17pt;
-        
+
                     content: "/10";
                 }
             }
@@ -33,13 +33,13 @@
     .secondary-form-groups-container {
         display: flex;
         flex-direction: row;
-        
+
         .small-form-group-container {
             width: 40%;
 
             padding-right: 5px;
         }
-        
+
         .large-form-group-container {
             width: 60%;
 
