--- a/shufl-web/src/assets/scss/variables/dimensions.scss
+++ b/shufl-web/src/assets/scss/variables/dimensions.scss
@@ -1,5 +1,8 @@
 @import "colours";
 
+$scrollbar-width: 10px;
+$scrollbar-border-radius: 3px;
+
 $primary-border-radius: 5px;
 $secondary-border-radius: 3px;
 
