--- a/shufl-web/src/app/components/shared/track-list/track-list-item/track-list-item.component.html
+++ b/shufl-web/src/app/components/shared/track-list/track-list-item/track-list-item.component.html
@@ -1,21 +1,21 @@
 <div class="track">
     <div class="track-number">
-        <p>{{ trackNumber }}</p>
+        <p>{{ track.trackNumber }}</p>
     </div>
 
     <div class="track-name">
-        <p>{{ trackName }}</p>
+        <p>{{ track.name }}</p>
     </div>
 
     <div class="artists-container">
-        <div app-inline-artists-ticker class="inline-artists-ticker" [artists]="trackArtists"></div>
+        <div app-inline-artists-ticker class="inline-artists-ticker" [artists]="track.artists"></div>
     </div>
 
     <div class="track-duration">
-        <p>{{ trackDuration | date: 'mm:ss' }}</p>
+        <p>{{ track.duration | date: 'mm:ss' }}</p>
     </div>
 
-    <a class="button" href="{{ trackUrl }}" target="new">
+    <a class="button" href="https://open.spotify.com/track/{{ track.id }}" target="new">
         <img src="assets/img/logos/spotify-logo.png">
         <p>Open</p>
     </a>
