Scaling changes for Album Icon

--- a/shufl-web/src/app/components/shared/album-icon/album-icon.component.scss
+++ b/shufl-web/src/app/components/shared/album-icon/album-icon.component.scss
@@ -73,3 +73,17 @@
         }
     }
 }
+
+@media(min-width: 1920px) {
+    .album-icon-container {
+        .album-art {
+            width: 150px;
+            height: 150px;
+    
+            img {
+                width: 150px;
+                height: 150px;
+            }
+        }
+    }
+}
