--- a/shufl-web/src/app/components/group/group-suggestion-details/group-suggestion-user-rating-list/group-suggestion-user-rating-list.component.html
+++ b/shufl-web/src/app/components/group/group-suggestion-details/group-suggestion-user-rating-list/group-suggestion-user-rating-list.component.html
@@ -7,6 +7,6 @@
     </div>
 </div>
 
-<div class="no-group-suggestion-user-ratings-message" *ngIf="groupSuggestionRatings == null || groupSuggestionRatings.length === 0">
+<div class="no-group-suggestion-user-ratings-message" *ngIf="groupSuggestionRatings != null && groupSuggestionRatings.length === 0">
     <p>No Ratings Yet</p>
 </div>
